--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12 gap-2 ">
           <div class="progress"></div>
           <section>
             <div class="container">
-              <div id="cards" class="row"></div>
+              <div id="cards" class="row" style="height: 100%;" ></div>
             </div>
           </section>
         </div>
