--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="progress"></div>
           <section>
             <div class="container">
-              <div id="cards" class="row row-cols-5 " style="height: 100%;" ></div>
+              <div id="cards" class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 g-3"  style="height: 100%;" ></div>
             </div>
           </section>
         </div>
